# weko-group-cache-db

./: .editorconfig  .gitignore  Dockerfile  README.md  compose.yaml  config.toml  docker-compose-sentinel.yml  docker-compose.yml  install-docker.sh  install-nginx.sh  install.sh  institutions.toml  packages.txt  pyproject.toml  supervisord.conf  supervisord.service  uwsgi.ini
.devcontainer/: dev.compose.yaml  devcontainer.json  setup.sh
.github/workflows/: ci.yml
app/: app.py
app/config/: setup.py
app/config/config/: config.py  messages.py
app/get-groups/: requirements.txt  setup.py  tox.ini
app/get-groups/get_groups/: celery.py  cli.py  groups_celery.py  tasks.py  utils.py
app/get-groups/tests/: conftest.py  test_cli.py  test_tasks.py  test_utils.py
app/jc-redis/: requirements.txt  setup.py  tox.ini
app/jc-redis/jc_redis/: redis.py  redis_conn.py
app/jc-redis/tests/: conftest.py  test_redis.py  test_redis_conn.py
app/new-group/: requirements.txt  setup.py  tox.ini
app/new-group/new_group/: api.py  ext.py  utils.py
app/new-group/tests/: conftest.py  test_api.py  test_utils.py
nginx/: Dockerfile  shibboleth2.xml  supervisord.conf  uwsgi.conf
nginx/keys/: client.crt  server.crt  server.csr  server.key
tests/: conftest.py  ruff.toml  test_cli.py  test_config.py  test_groups.py  test_loader.py  test_logger.py  test_redis.py  test_redis_conn.py  test_tasks.py  test_utils.py
weko_group_cache_db/: __init__.py  cli.py  config.py  exc.py  groups.py  loader.py  logger.py  messages.py  redis.py  redis_conn.py  tasks.py  utils.py
