[project]
name = "weko-group-cache-db"
version = "0.1.0"
description = "CLI tool for caching mAP group information on JAIRO Cloud."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "redis>=7.0.0",
    "requests>=2.32.5",
    "rich-click>=1.9.4",
]

[project.scripts]
wgcd = "weko_group_cache_db.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
# refer to https://github.com/taskipy/taskipy?tab=readme-ov-file#usage
test = "pytest"
"test:cov" = "pytest --cov=server --cov-report=term --cov-report=html"
lint = "uvx ruff check"
"lint:fix" = "uvx ruff check --fix"
format = "uvx ruff format"
typecheck = "pyright"
check-updates = "uvx --from=pip-check-updates pcu pyproject.toml"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
source = ["weko_group_cache_db"]
omit = ["*/__init__.py", "*/tests/*"]
