[project]
name = "weko-group-cache-db"
version = "1.0.0rc4"
description = "CLI tool for caching mAP group information on JAIRO Cloud."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "backoff>=2.2.1",
    "inflect>=7.5.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "rich-click>=1.9.4",
    "werkzeug>=3.1.3",
]

[tool.setuptools.packages.find]
include = ["weko_group_cache_db"]

[project.scripts]
wgcd = "weko_group_cache_db.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "taskipy>=1.14.1",
    "toml>=0.10.2",
]

[tool.taskipy.tasks]
# refer to https://github.com/taskipy/taskipy?tab=readme-ov-file#usage
test = "pytest"
"test:cov" = "pytest --cov=weko_group_cache_db --cov-branch --cov-report=term --cov-report=html"
lint = "uvx ruff check"
"lint:fix" = "uvx ruff check --fix"
format = "uvx ruff format"
typecheck = "pyright"
check-updates = "uvx --from=pip-check-updates pcu pyproject.toml"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
source = ["weko_group_cache_db"]

[tool.coverage.report]
omit = ["__init__.py", "tests/*"]
exclude_also = [
  "if t.TYPE_CHECKING:",
]

[tool.ruff.lint]
# refer to https://docs.astral.sh/ruff/settings/#lint
ignore = [
  "D203",
  "D213",
  "TC006",
  "COM812",
  "ANN201",
  "TRY400",
]
preview = true
select = ["ALL"]

[tool.ruff.lint.isort]
# refer to https://docs.astral.sh/ruff/settings/#lintisort
combine-as-imports = true
known-first-party = ["weko_group_cache_db"]
lines-between-types = 1

[tool.ruff.analyze]
# refer to https://docs.astral.sh/ruff/settings/#analyze
detect-string-imports = true

[tool.ruff.format]
# refer to https://docs.astral.sh/ruff/settings/#format
docstring-code-format = true
docstring-code-line-length = 80
line-ending = "lf"
preview = true
skip-magic-trailing-comma = false

[tool.pyright]
typeCheckingMode =  "standard"

